add max_toksn
